tests/NormalTests/paczka1/small_fuzzy/21546686.err
Error in line 1: 2evJ7 A349 30,4
Error in line 7: sSb A349 97,7
Error in line 9: 76Yo8Jiour S729 92,7
Error in line 8: sSb S129 67,3
